<resources>
    <string name="app_name">Warehousing</string>
    <string name="password">Password</string>
    <string name="employee_id">Employee ID</string>
    <string name="login">Login</string>
    <string name="system_name">Hotayi Electronics Warehousing System</string>

    <!--  Navigation menu  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="material_listing">Rack listing</string>
    <string name="add_new_material">Add new material</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rack">Rack</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description:</string>

    <!--  fragment_add_material.xml  -->
    <string name="part_number">Part Number</string>
    <string name="status">Status</string>
    <string name="rack_in_date">Rack In Date</string>
    <string name="emp_id">Emp ID</string>
    <string name="add_button">Add</string>
    <string name="serial_number">Serial Number</string>
    <string name="new_material">New Material</string>
    <string name="clear">Clear</string>
    <string name="searchTitle">Search</string>
    <string name="low_quota_racks">Low Quota Racks</string>
    <string name="total_racks">Total Racks</string>
    <string name="today_in">Today In</string>
    <string name="today_out">Today Out</string>
    <string name="total_rack">Total Rack</string>
    <string name="dashboard">Dashboard</string>
    <string name="date">Date</string>
    <string name="summary">Summary</string>
    <string name="notice">Notice</string>
    <string name="inform_icon">inform_icon</string>

</resources>