<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        tools:context=".AddMaterialFragment">

        <TextView
            android:id="@+id/addTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/new_material"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/qrButton"
            android:layout_width="49dp"
            android:layout_height="52dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/qr_code_scanner"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/serialInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serialInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:hint="@string/serial_number"
                android:maxLength="21"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/partInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/serialInputLayout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/partInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/part_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantityInputLayout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/partInputLayout"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="45dp"
            android:layout_marginTop="25dp"
            android:duplicateParentState="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/statusInputLayout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/partInputLayout"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/statusInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/status"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityInputLayout"
            android:layout_marginStart="45dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rack_in_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/receivedInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateInputLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/receivedInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emp_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/receivedInputLayout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="25dp"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/receivedInputLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="45dp"
            android:text="@string/cancel" />

    </RelativeLayout>
</layout>